# Red-Car

./: CMakeLists.txt  laneFollowerNetwork.pt  settings.yaml
config/: overtaking_settings.yaml
include/manual_lane_follow/: controlConst.h  imageProcessor.h  lane_detector.h  lanes_to_steering.h  steeringAngleFromPhoto.h
launch/: car_node.launch  on_start.launch
models/overtaking/: laneFollowerNetwork.pt  speedNetwork.pt  steering_train_network.pt  steering_train_network.pth
models/semantic_segmentation/: converted_jit_model.pt
scripts/: safety_node.py
src/: fastLaneFollow.cpp  jelonek_safety_node.py  oldcode.txt  safety_node.py
src/manual_lane_follow/: manual_lane_follow.cpp
src/overtaking/: overtaking.cpp
